Murphy System/outputs/workspace_output_1769155755_2019.txt
  File "<stdin>", line 17
    """Define a new workflow"""
       ^^^^^^
SyntaxError: invalid syntax
